# CallLog

./: .gitignore  CDRTableItem.cpp  CDRTableItem.h  CDRTableManager.cpp  CDRTableManager.h  CDRTableModel.cpp  CDRTableModel.h  CMakeLists.txt  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SQLToNoSQL.cpp  SQLToNoSQL.h  SystemItem.cpp  SystemItem.h  WebServer.cpp  WebServer.h  freePBX.txt  main.cpp
MongoCore/: MongoCore.h
MongoCoreItem/: CMakeLists.txt  MongoCoreItem.pri  README.md  item.h
Web/: CDRTableManagerContainer.cpp  CDRTableManagerContainer.h  CSSGenerator.h  LoginPanel.cpp  LoginPanel.h  MainApplication.cpp  MainApplication.h  User.cpp  User.h  UserManager.cpp  UserManager.h
Web/Bootstrap/: Bootstrap5ThemeKeys.h
Web/CustomWidget/: CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  ContainerWidget.cpp  ContainerWidget.h  FileUploaderWidget.cpp  FileUploaderWidget.h  LineEdit.cpp  LineEdit.h  Panel.cpp  Panel.h  PushButton.cpp  PushButton.h  SwitchCheckBox.cpp  SwitchCheckBox.h  Text.cpp  Text.h  Theme.cpp  Theme.h
approot/: wt_config.xml
docroot/: canvas.js  dau-rest-api.html  jsonViewer.js  script.js  scriptbackup.js  scriptv2.js
docroot/fonts/: 7SEGMENTALDIGITALDISPLAY.txt  G7_Cube.txt  LiquidCrystal.txt  fonts.qrc  scoreboard.txt
docroot/style/: fontstyle.css  general.css  responsive.css
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/include/libbson-1.0/bson/: bson-config.h
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/include/libmongoc-1.0/mongoc/: mongoc-config.h  mongoc-version.h
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/bson-1.0/: bson_shared-targets-relwithdebinfo.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/bsoncxx-3.10.2/: bsoncxx_targets.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/libbson-1.0/: libbson-1.0-config-version.cmake  libbson-1.0-config.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/libbson-static-1.0/: libbson-static-1.0-config.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/libmongoc-1.0/: libmongoc-1.0-config.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/libmongoc-static-1.0/: libmongoc-static-1.0-config.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/mongoc-1.0/: mongoc-1.0-config.cmake  mongoc-targets-relwithdebinfo.cmake  mongoc-targets.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/cmake/mongocxx-3.10.2/: mongocxx_targets.cmake
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/lib/pkgconfig/: libbson-1.0.pc  libbson-static-1.0.pc  libbsoncxx.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongoc-static-1.0.pc  libmongocxx.pc
mongo-cxx-r.3.10.2-mingw-13.1.0-win64/Release/share/mongo-c-driver/: uninstall.cmd
